force-app/main/default/objects/Production_Order__c/Production_Order__c.object-meta.xml
<CustomObject>
    <label>Production Order</label>
    <nameField>
        <label>Production Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Production Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>