force-app/main/default/objects/Production_Order__c/fields/IdProductionOrder__c.field-meta.xml
<CustomField>
    <fullName>IdProductionOrder__c</fullName>
    <externalId>true</externalId>
    <label>IdProductionOrder</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>