force-app/main/default/objects/Production_Order__c/fields/ProductionOrderCode__c.field-meta.xml
<CustomField>
    <fullName>ProductionOrderCode__c</fullName>
    <label>ProductionOrderCode</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>