force-app/main/default/objects/Production_Order__c/fields/SharedUsersLong__c.field-meta.xml
<CustomField>
    <fullName>SharedUsersLong__c</fullName>
    <label>Shared Users</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>