force-app/main/default/objects/Production_Order__c/fields/UnitAcronym__c.field-meta.xml
<CustomField>
    <fullName>UnitAcronym__c</fullName>
    <label>Unit Acronym</label>
    <length>255</length>
    <type>Text</type>
</CustomField>