force-app/main/default/objects/Production_Order__c/fields/UnitDescription__c.field-meta.xml
<CustomField>
    <fullName>UnitDescription__c</fullName>
    <label>Unit Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>