force-app/main/default/objects/Production_Order__c/validationRules/BlockEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockEdit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Links&quot;,
    $Profile.Name = &quot;LinksSales&quot;,
    OR(
         ISCHANGED(Name ),
         ISCHANGED(OwnerId)  
    )
)</errorConditionFormula>
    <errorMessage>Non puoi modificare il campo.</errorMessage>
</ValidationRule>