force-app/main/default/objects/Production_Order__c/listViews/My_Production_Order.listView-meta.xml
<ListView>
    <fullName>My_Production_Order</fullName>
    <columns>NAME</columns>
    <columns>IdProductionOrder__c</columns>
    <columns>ProductionOrderCode__c</columns>
    <columns>Responsible__c</columns>
    <columns>StartDate__c</columns>
    <columns>Status__c</columns>
    <columns>UnitAcronym__c</columns>
    <columns>UnitDescription__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Production Order</label>
</ListView>